# yara-rust

./: .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: bindgen.yaml  bindings.yaml  release.yaml  tests.yml
examples/: tutorial.rs
src/: compiler.rs  errors.rs  flags.rs  initialize.rs  lib.rs  matches.rs  rules.rs  scanner.rs  string.rs
src/internals/: bindings.rs  compiler.rs  configuration.rs  iterator.rs  matches.rs  meta.rs  mod.rs  module_import.rs  object.rs  rules.rs  scan.rs  stream.rs  string.rs
tests/: rules.txt  scanfile.txt  test_initialize.rs  test_rules.rs  test_save_load.rs  test_scan.rs  tests.rs
yara-sys/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  wrapper.h
yara-sys/bindings/: bindings.rs  yara-3.11-unix.rs  yara-3.11-windows.rs  yara-3.11.rs  yara-3.7.rs  yara-3.8-windows.rs  yara-3.8.rs  yara-4.0-unix.rs  yara-4.0-windows.rs  yara-4.1.1-unix.rs  yara-4.1.1-windows.rs  yara-4.1.2-unix.rs  yara-4.1.2-windows.rs  yara-4.1.2-x86_64-pc-windows-gnu.rs  yara-4.1.3-windows.rs  yara-4.2.0-unix.rs  yara-4.2.1-unix.rs  yara-4.2.1-windows.rs  yara-4.2.1-x86_64-pc-windows-gnu.rs  yara-4.2.1-x86_64-unknown-linux-gnu.rs  yara-4.2.2-x86_64-pc-windows-gnu.rs  yara-4.2.3-aarch64-apple-darwin.rs  yara-4.2.3-aarch64-unknown-linux-gnu.rs  yara-4.2.3-aarch64-unknown-linux-musl.rs  yara-4.2.3-x86_64-apple-darwin.rs  yara-4.2.3-x86_64-pc-windows-msvc.rs  yara-4.2.3-x86_64-unknown-linux-musl.rs  yara-4.3.0-x86_64-unknown-linux-gnu.rs  yara-4.3.1-i686-pc-windows-gnu.rs  yara-4.3.1-x86_64-apple-darwin.rs  yara-4.3.1-x86_64-pc-windows-gnu.rs  yara-4.3.1-x86_64-pc-windows-msvc.rs  yara-4.3.1-x86_64-unknown-linux-gnu.rs  yara-4.3.1-x86_64-unknown-linux-musl.rs  yara-4.5.0-x86_64-apple-darwin.rs  yara-4.5.0-x86_64-pc-windows-gnu.rs  yara-4.5.0-x86_64-unknown-linux-musl.rs  yara-4.5.1-x86_64-apple-darwin.rs  yara-4.5.1-x86_64-pc-windows-msvc.rs  yara-4.5.1-x86_64-unknown-linux-gnu.rs  (+6 more)
yara-sys/src/: errors.rs  get_rules.c  lib.rs
yara-sys/src/errors/: compile.rs  mod.rs
yara-sys/tests/: tests.rs
