[package]
name = "yara"
version = "0.9.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings for VirusTotal/yara"
readme = "README.md"
repository = "https://github.com/Hugal31/yara-rust"
keywords = ["yara"]
categories = ["api-bindings"]
edition = "2018"

[features]
default = ["bindgen"]
bindgen = ["yara-sys/bindgen"]
bundled-4_1_2 = ["yara-sys/bundled-4_1_2"]
vendored = ["yara-sys/vendored"]

[dependencies]
thiserror = "1.0"
lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
crossbeam = "0.7"
tempfile = "3.2.0"

[dependencies.yara-sys]
path = "yara-sys"
version = "0.8"
default-features = false

[package.metadata.docs.rs]
no-default-features = true
features = ["bundled-4_1_2"]
