[workspace]
members = ["yara-sys"]

[package]
name = "yara"
version = "0.17.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings for VirusTotal/yara"
readme = "README.md"
repository = "https://github.com/Hugal31/yara-rust"
keywords = ["yara"]
categories = ["api-bindings"]
edition = "2018"

[features]
default = ["bindgen", 'module-dotnet', 'module-dex', 'module-macho', 'module-hash', 'ndebug']
bindgen = ["yara-sys/bindgen"]
bundled-4_3_0 = ["yara-sys/bundled-4_3_0"]
vendored = ["yara-sys/vendored"]
module-cuckoo = ["yara-sys/module-cuckoo"]
module-magic = ["yara-sys/module-magic"]
module-macho = ["yara-sys/module-macho"]
module-dex = ["yara-sys/module-dex"]
module-debug-dex = ["yara-sys/module-debug-dex"]
module-dotnet = ["yara-sys/module-dotnet"]
module-hash = ["yara-sys/module-hash"]
profiling = ["yara-sys/profiling"]
ndebug = ["yara-sys/ndebug"]
openssl-static = ["yara-sys/openssl-static"]
yara-static = ["yara-sys/yara-static"]

[dependencies]
bitflags = "1.3"
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
crossbeam = "0.8"
libflate = "1.2"
tempfile = "3.3"

[dependencies.yara-sys]
path = "yara-sys"
version = "0.17.0"
default-features = false

[package.metadata.docs.rs]
no-default-features = true
features = ["bundled-4_3_0"]
