[package]
name = "yara-sys"
version = "0.10.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Native bindings to the libyara library"
readme = "README.md"
repository = "https://github.com/Hugal31/yara-rust"
keywords = ["yara", "ffi"]
categories = ["external-ffi-bindings"]
links = "yara"
edition = "2018"

[features]
default = ["bindgen"]
bundled-4_1_2 = []
vendored = ["cc", "globwalk"]

[build-dependencies]
bindgen = { version = "0.58", optional = true }
cc = { version = "1.0", optional = true }
globwalk = { version = "0.8", optional = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["bundled-4_1_2"]
