[package]
name = "yara-sys"
version = "0.14.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Native bindings to the libyara library"
readme = "README.md"
repository = "https://github.com/Hugal31/yara-rust"
keywords = ["yara", "ffi"]
categories = ["external-ffi-bindings"]
links = "yara"
edition = "2018"

[features]
default = ["bindgen"]
bundled-4_2_1 = []
vendored = ["cc", "globwalk", "fs_extra"]

[build-dependencies]
bindgen = { version = "0.60", optional = true, default-features = false, features = [ "logging", "runtime", "which-rustfmt" ] }
cc = { version = "1.0", optional = true }
globwalk = { version = "0.8", optional = true }
fs_extra = { version = "1.2", optional = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["bundled-4_2_1"]
